--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -95,7 +95,7 @@ h5 {
 
 .header {
     width: 100%;
-    height: 160px;
+    height: 140px;
     padding: 40px;
 
 }
@@ -188,9 +188,12 @@ input.largeCheckbox {
     width: 100%;
 }
 
+#cards {
+  margin-left: 140px;
+}
+
 #cards.container-fluid {
   margin-top: 10px;
-  margin-left: 40px;
   width: 100%;
   min-width: 280px;
 }
@@ -219,9 +222,8 @@ input.largeCheckbox {
 }
 
 .card-block {
-    width: 300px;
+    max-width: 300px;
 }
-
 
 thead {
   background-color: #808080;
@@ -269,17 +271,15 @@ td {
 #sidebar.mx-auto {
     display: block;
     height: auto;
-    // margin-bottom: 90px;
-    /* keeps sticky footer from covering content in sidebar */
     margin-top: 15px;
-    float: left;
-
     z-index: 0;
     /* Stay on top */
     box-shadow: 15px 12px 28px #FF8C00;
     flex-direction: column;
     align-items: center;
-    // justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 /* The navigation menu links */
@@ -303,7 +303,9 @@ audio.controls {
 //photos, images and logos
 .img-responsive {
     width: auto;
+    height: auto;
     max-width: 260px;
+    max-height: 260px;
 }
 
 #messagesResponse.container-fluid {
@@ -328,7 +330,7 @@ audio.controls {
 }
 
 #newLP img{
-    max-width: 260px;
+    max-width: 280px;
     height: auto;
 }
 
@@ -342,11 +344,10 @@ audio.controls {
 }
 
 #shoes {
-    margin-top: 0px;
+    margin-top: -60px;
     z-index: 1;
     max-width: 250px;
     height: auto;
-    float: right;
 }
 
 #thumbnail {
@@ -420,7 +421,7 @@ audio.controls {
 
     .header {
       columns: 1;
-      height: 180px;
+      height: 140px;
     }
 
     #shoes {
@@ -431,6 +432,10 @@ audio.controls {
     audio {
       height: 40px;
       width: 100%;
+    }
+
+    #cards.container-fluid {
+      margin-left: 15px;
     }
 
     #newLP {
@@ -474,12 +479,18 @@ audio.controls {
 
     .header {
       columns: 1;
-      height: 200px;
+      height: 120px;
+    }
+
+    #cards {
+      margin-left: auto;
+      margin-right: auto;
     }
 
     #shoes {
-        width: 150px;
+        width: 160px;
         height: auto;
+        margin-top: -80px;
     }
 
     audio {
@@ -508,7 +519,7 @@ audio.controls {
         position: relative;
         width: 100%;
         max-height: 480px;
-        columns: 3;
+        columns: 2;
 
     }
 
@@ -529,6 +540,11 @@ audio.controls {
       columns: 1;
     }
 
+    #cards {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     audio {
       height: 40px;
     }
@@ -538,7 +554,9 @@ audio.controls {
     }
 
     #shoes {
-      margin-top: -80px;
+        width: 160px;
+        height: auto;
+        margin-top: -80px;
     }
 
     #newLP {
@@ -601,10 +619,6 @@ audio.controls {
       width: 240px;
     }
 
-    #shoes {
-      margin-top: -80px;
-    }
-
     #footer {
         position: fixed;
         font-size: 12px;
@@ -619,7 +633,7 @@ audio.controls {
     #sidebar {
         position: relative;
         max-width: 360px;
-        columns: 3;
+        columns: 1;
     }
 
     #content {
@@ -696,8 +710,22 @@ audio.controls {
     }
 
     .header {
-      height: 160px;
       columns: 3;
+    }
+
+    #shoes {
+        width: 160px;
+        height: auto;
+        margin-top: -80px;
+    }
+
+    #cards {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    #cards.container-fluid {
+      width: 200px;
     }
 
     audio {
@@ -710,26 +738,16 @@ audio.controls {
 
 
     #calendar {
-      width: 240px;
+      width: 260px;
     }
-
-    // .data-tockify-height {
-    //   height: 400px;
-    // }
 
 
       #newLP {
-        width: 240px;
+        width: 260px;
       }
 
       #recordLabelLogo.img-responsive {
         display: none;
-      }
-
-      #shoes {
-        width: 160px;
-        height: auto;
-        margin-top: 20px;
       }
 
 }
